<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pregunta1">

    <TextView
        android:id="@+id/P1_TV_numErrores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="53dp"
        android:text="@string/P1_textoNumErrores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/P1_TV_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="258dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="109dp"
        android:text="@string/P1_pregunta"
        app:layout_constraintBottom_toTopOf="@+id/P1_B_respuesta1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/P1_B_respuesta1"
        android:layout_width="377dp"
        android:layout_height="49dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="17dp"
        android:text="@string/P1_respuesta1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P1_TV_pregunta" />

    <Button
        android:id="@+id/P1_B_respuesta3"
        android:layout_width="377dp"
        android:layout_height="49dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="16dp"
        android:onClick="goToQ2"
        android:text="@string/P1_respuesta3"
        app:layout_constraintBottom_toTopOf="@+id/P1_B_respuesta4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P1_B_respuesta2" />

    <Button
        android:id="@+id/P1_B_respuesta2"
        android:layout_width="377dp"
        android:layout_height="49dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:text="@string/P1_respuesta2"
        app:layout_constraintBottom_toTopOf="@+id/P1_B_respuesta3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P1_B_respuesta1" />

    <Button
        android:id="@+id/P1_B_respuesta4"
        android:layout_width="377dp"
        android:layout_height="49dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/P1_respuesta4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>